--- a/src/components/DownloadResumeBtn/DownloadResumeBtn.scss
+++ b/src/components/DownloadResumeBtn/DownloadResumeBtn.scss
@@ -7,6 +7,7 @@
     top: 5%;
     left: 83%;
     display: flex;
+    align-items: center;
     box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
     margin-top: 10px;
     -webkit-animation: bounce 1s infinite alternate;
