Move app files to app folder

--- a/src/components/app/MyResumeApp.scss
+++ b/src/components/app/MyResumeApp.scss
@@ -25,7 +25,8 @@ page[pagesize="A4"] {
 
 @media print {
 
-    body, page {
+    body,
+    page {
         margin: 0;
         box-shadow: 0 0;
         color-adjust: exact;
@@ -36,7 +37,8 @@ page[pagesize="A4"] {
         width: 0 !important;
     }
 
-    .download-resume, footer {
+    .download-resume,
+    footer {
         display: none;
     }
 }
